# cmpsc487-refactor-ci

./: .gitignore  .pylintrc  README.md  dl_lists.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
tests/: test_dl_lists.py
